--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </nav>
 
     <div class="follow">
-        <a href="#" class="fab fa-linkedin"></a>
-        <a href="#" class="fab fa-github"></a>
-        <a href="#" class="fab fa-twitter"></a>
+        <a href="https://www.linkedin.com/in/aravind-t-1131581b3/" class="fab fa-linkedin"></a>
+        <a href="https://github.com/aravind2712" class="fab fa-github"></a>
+        <a href="https://twitter.com/aravind_2712_?t=qeEdxV86j0x92eU1529JHw&s=08" class="fab fa-twitter"></a>
         <a href="https://www.instagram.com/aravind_2712_/" class="fab fa-instagram"></a>
     </div>
 
