--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aravind T -  Personal Blog</title>
+    <title>Aravind T - Personal Blog</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -95,7 +95,7 @@
                 <p> <span> country : </span> india </p>
             </div>
         </div>
-        <a href="file:///C:/Users/Aravind/Documents/personal%20porfolio%20sample/personal%20porfolio/images/Aravind%20T_CSE_KPRIET.pdf" class="btn">download CV</a>
+        <a href="file:///C:/Users/Aravind/Documents/personal%20porfolio%20sample/pdf/Aravind%20T_CSE_KPRIET.pdf" class="btn">download CV</a>
     </div>
 
 </div>
@@ -321,13 +321,13 @@
 
     <div class="row">
 
-        <form action="">
+        <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScDIRP8vqb8TuLK4LI0gQUOwPHCLqR4AGj8ryFZbo-ubOiVQQ/formResponse" method="post" onsubmit = "window.open('https://aravind27.netlify.app/')">
 
-            <input type="text" placeholder="name" class="box">
-            <input type="email" placeholder="email" class="box">
-            <input type="number" placeholder="number" class="box">
+            <input type="text" required placeholder="name" class="box" required name="entry.2112684140">
+            <input type="email" required placeholder="email" class="box" required name="entry.1125617775">
+            <input type="number" required placeholder="number" class="box" required name="entry.589834680=989949">
 
-            <textarea name="" placeholder="message" id="" cols="30" rows="10"></textarea>
+            <textarea name="" required placeholder="message" id="" cols="30" rows="10" required name="entry.597882556"></textarea>
 
             <input type="submit" class="btn" value="send message">
 
@@ -343,7 +343,7 @@
 <!-- contact section ends -->
 
 <!-- footer section  -->
-<footer class="footer"> created by <span> Aravind 27 </span> | all rights reserved! </footer>
+<footer class="footer"> created by <span> ❤ Aravind 27 ❤ </span> | all rights reserved! </footer>
 
 
 
