--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 <section class="home" id="home">
 
     <div class="content">
-        <span class="hi"> hi there... </span>
-        <h3> i am <span> Aravind T </span> </h3>
-        <p class="info"> i am a Computer Science Engineer </p>
+        <span class="hi"> Hi Here... </span>
+        <h3> I Am <span> Aravind T </span> </h3>
+        <p class="info"> I am a Computer Science Engineer </p>
         <p class="text"> I am Computer Science Engineer with interest for working in the tech industry,willing to provide my hundred percent for the organization.</p>
         <a href="#about" class="btn">about me</a>
     </div>
@@ -81,21 +81,21 @@
     </div>
 
     <div class="content">
-        <h3> my name is Aravind T & i am a Computer Science Engineer </h3>
+        <h3> My name is Aravind T & I am a Computer Science Engineer </h3>
         <p>I am Computer Science Engineer with interest for working in the tech industry,willing to provide my hundred percent for the organization.</p>
         <div class="box-container">
             <div class="box">
                 <p> <span> age : </span> 21 </p>
-                <p> <span> gender : </span> male </p>
-                <p> <span> language : </span> tamil, english </p>
+                <p> <span> gender : </span> Male </p>
+                <p> <span> language : </span> Tamil, English </p>
             </div>
             <div class="box">
                 <p> <span> phone : </span> +91 98941 62769 </p>
-                <p> <span> email : </span>  aravinthangaraj7@gmail.com </p>
-                <p> <span> country : </span> india </p>
+                <p> <span> email : </span>aravindthangaraj7@gmail.com</p>
+                <p> <span> Location : </span> Tirupur </p>
             </div>
         </div>
-        <a href="file:///C:/Users/Aravind/Documents/personal%20porfolio%20sample/pdf/Aravind%20T_CSE_KPRIET.pdf" class="btn">download CV</a>
+        <a href="C:\Users\Aravind\Documents\personal porfolio sample\pdf\Aravind_T - Resume.pdf" class="btn">download CV</a>
     </div>
 
 </div>
@@ -121,11 +121,11 @@
             <div class="bar"> <span></span> </div>
         </div>
         <div class="progress">
-            <h3> JavaScript <span> 80% </span> </h3>
+            <h3> JavaScript <span> 70% </span> </h3>
             <div class="bar"> <span></span> </div>
         </div>
         <div class="progress">
-            <h3> MySQL <span> 80% </span> </h3>
+            <h3> SQL <span> 70% </span> </h3>
             <div class="bar"> <span></span> </div>
         </div>
     </div>
@@ -135,7 +135,6 @@
         <div class="box">
             <h3> Professional Skills </h3>
             <p>Adobe Illustrator</p>
-            <p>Adobe XD</p>
             <p>Public Speaking</p>
         </div>
         <div class="box">
@@ -165,7 +164,7 @@
             <i class="fas fa-graduation-cap"></i>
             <h3>KPR Institute Of Engineering and Technology,Coimbatore</h3>
             <h4>Bachelor of Engineering in Computer Science Engineering,2023</h4>
-            <p>Current CGPA 8.66</p>
+            <p>Current CGPA 8.19</p>
         </div>
 
         <div class="box">
@@ -181,11 +180,10 @@
             <i class="fas fa-star"></i>
             <h3>Roles and Responsibilities</h3>
             <h4>KPR Institute of Engineering and Technology</h4>
+            <p>President, KPRIET Sangamam</p>
             <p>President, TEDxKPRIET 2020-2021</p>
             <P>Vice President, Toastmasters Club</P>
-            <p>Joint Treasurer, KPRIET Sangamam</p>
             <p>Class Representative</p>
-            <p>Member, Photography Club</p>
         </div>
 
     </div>
@@ -244,10 +242,10 @@
         </div>
 
         <div class="box">
-            <img src="images/img-5.jpeg" alt="">
+            <img src="images/litfest21.png" alt="">
             <h3> project 02 </h3>
             <div class="icons">
-                <a href="#" class="fas fa-link"></a>
+                <a href="#https://litfest21.netlify.app/" class="fas fa-link"></a>
             </div>
         </div>
 
@@ -300,7 +298,7 @@
         <div class="icons">
             <i class="fas fa-envelope"></i>
             <h3>my email</h3>
-            <p>aravindthangaraj7@gmail.com</p>
+            <p> aravindthangaraj7@gmail.com</p>
             <p>19cs014@kpriet.ac.in</p>
         </div>
 
